--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,20 +4,19 @@ description: Generate JUnit XML reports from dart test runs. Transforms the outp
   JUnit style XML
 
 homepage: https://github.com/TOPdesk/dart-junitreport
-documentation:
 
 dependencies:
-  args: ^2.3.0
-  intl: ^0.17.0
+  args: ^2.5.0
+  intl: ^0.19.0
   testreport: ^2.0.1
-  xml: ^5.3.1
+  xml: ^6.5.0
 
 dev_dependencies:
   test: any
   lints: 1.0.1
 
 environment:
-  sdk: '>=2.14.0 <3.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 executables:
   tojunit:
